# tfbs

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  audit.toml  docker-compose.yml
.github/workflows/: audit.yml  ci.yml  gitleaks.yml
migrations/: 20260402003009_create_users.sql  20260402014738_unique_login.sql  20260402231849_add_roles.sql  20260409205901_create_keylocker.sql  20260409215006_user_kdf_salt.sql  20260414210724_keylocker_hint.sql
src/: api.rs  data.rs  error.rs  keylocker.rs  logtail.rs  main.rs  tls.rs
src/api/: keylocker.rs  mod.rs  user.rs
src/keylocker/: encryption.rs  error.rs  key_derivation.rs  mod.rs
templates/: index.html
