[package]
name = "tfbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.10"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.13.0"
anyhow = "1.0.102"
argon2 = "0.5.3"
askama = "0.15.6"
clap = { version = "4.6.0", features = ["derive", "cargo"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
